--- a/users/tsgel.html
+++ b/users/tsgel.html
@@ -66,9 +66,14 @@
   
 <li><a href="https://www.facebook.com/Metwade3group/?locale=ar_AR" target="_blank">
   <i class="icon-facebook"></i> جروب  متواضع</a></li></ul>
+       
+<div class="account_manager_box"><p> Owner</p><img src="image/mr.samy.jpeg">
+  <h3>Mr/Samy</h3><p></p>
+  <p><small> مدير الشركة</small></p>
+  <div class="box_data"><a target="_blank" href="https://wa.me/01223788884">
+    <i class="icon-whatsapp"></i> 01223788884</a></div></div>
   <div class="account_manager_box"><p><span class="hint--left hint–info" data-hint="منشئ الموقع">
-    <i class="icon-lightbulb"></i> منشئ الموقع</span></p><img src="image/eng.jpg"><h3>Eng.Mahmoud Ibrahem</h3><p>
-يوم الجمعه اجازة رسمية</small></p>
+    <i class="icon-lightbulb"></i> منشئ الموقع</span></p><img src="image/eng.jpg"><h3>Eng/Mahmoud Ibrahem</h3>
 <div class="box_data"><a href="tel:010000723760"><i class="icon-phone"></i> 01000723760</a>
 </div>
 </div>
@@ -76,7 +81,10 @@
   <h3>Mr/Mathew Nader</h3><p></p>
   <p><small>للتواصل قم بارسال اسم المستخدم عبر واتساب</small></p>
   <div class="box_data"><a target="_blank" href="https://wa.me/01144555790">
-    <i class="icon-whatsapp"></i> 01144555790</a></div></div></div>
+    <i class="icon-whatsapp"></i> 01144555790</a></div></div>
+
+        
+        </div>
           <div class="mainbar">
 
 <div class="col-12 payform"><div class="row"><h4>برجاء اختيار الإجراء</h4>
